@@ -1,11 +1,9 @@
 {
-  "timestamp" : "2022-05-07T01:45:00Z",
-  "count" : 7,
-  "count_minmax" : [ 7, 7 ],
-  "count_prev_day_inc" : 0,
-  "count_prev_day_dec" : 0,
+  "timestamp" : "2022-05-20T16:32:09Z",
+  "count" : 5,
+  "count_minmax" : [ 5, 7 ],
+  "count_decinc" : [ -2, +0 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
-  "uniques_prev_day_inc" : 0,
-  "uniques_prev_day_dec" : 0
+  "uniques_decinc" : [ -0, +0 ]
 }
