@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-05-18T16:34:54Z",
+  "timestamp" : "2022-05-20T16:32:09Z",
   "count_outdated" : 199,
   "uniques_outdated" : 40,
-  "count" : 228,
+  "count" : 226,
   "uniques" : 49,
   "views" : [
     {
       "timestamp": "2022-05-06T00:00:00Z",
-      "count": 7,
-      "count_minmax": [ 7, 7 ],
+      "count": 5,
+      "count_minmax": [ 5, 7 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
