@@ -1,10 +1,10 @@
 {
-  "count": 29,
+  "count": 27,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-05-06T00:00:00Z",
-      "count": 7,
+      "count": 5,
       "uniques": 1
     },
     {
